--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.library">
+    package="com.example.library" >
 
     <application
         android:allowBackup="true"
@@ -8,22 +8,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Library">
+        android:theme="@style/Theme.Library" >
+        <activity
+            android:name=".Login.updateUser"
+            android:exported="false" />
+        <activity
+            android:name=".Login.ListUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.SearchActivity"
+            android:exported="false" />
         <activity
             android:name=".Login.LoginActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".Login.RegisterActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".Activity.UpdateActivity"
@@ -35,9 +41,7 @@
         <activity
             android:name=".Activity.MainActivity"
             android:exported="true"
-            android:label="Book Library">
-
-        </activity>
+            android:label="Book Library" />
     </application>
 
 </manifest>
